# ChangeLog for dev-lang/perl
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/perl/ChangeLog,v 1.482 2015/04/11 17:39:51 zlogene Exp $

  11 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> perl-5.20.2.ebuild:
  ppc64 stable wrt bug #545510

  11 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> perl-5.20.2.ebuild:
  ppc stable wrt bug #545510

  08 Apr 2015; Jeroen Roovers <jer@gentoo.org> perl-5.20.2.ebuild:
  Stable for HPPA (bug #545510).

  05 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> perl-5.20.2.ebuild:
  sparc stable wrt bug #545510

  05 Apr 2015; Mike Frysinger <vapier@gentoo.org> perl-5.18.2-r2.ebuild,
  perl-5.20.1-r4.ebuild, perl-5.20.2.ebuild:
  Mark arm64/ia64/m68k/s390/sh stable.

  05 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> perl-5.20.2.ebuild:
  arm stable wrt bug #545510

  05 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> perl-5.20.2.ebuild:
  x86 stable wrt bug #545510

  04 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> perl-5.20.2.ebuild:
  alpha stable wrt bug #545510

  04 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> perl-5.20.2.ebuild:
  amd64 stable wrt bug #545510

  12 Mar 2015; Mikle Kolyada <zlogene@gentoo.org> perl-5.20.1-r4.ebuild:
  Mark arm64/m68k/s390/sh stable

  18 Feb 2015; Agostino Sarubbo <ago@gentoo.org> perl-5.20.1-r4.ebuild:
  Stable for alpha, wrt bug #536790

  17 Feb 2015; Markus Meier <maekke@gentoo.org> perl-5.20.1-r4.ebuild:
  arm stable, bug #536790

  17 Feb 2015; Agostino Sarubbo <ago@gentoo.org> perl-5.20.1-r4.ebuild:
  Stable for ia64, wrt bug #536790

  16 Feb 2015; Agostino Sarubbo <ago@gentoo.org> perl-5.20.1-r4.ebuild:
  Stable for sparc, wrt bug #536790

  15 Feb 2015; Agostino Sarubbo <ago@gentoo.org> perl-5.20.1-r4.ebuild:
  Stable for ppc64, wrt bug #536790

*perl-5.20.2 (14 Feb 2015)

  14 Feb 2015; Andreas K. Huettel <dilfridge@gentoo.org> +perl-5.20.2.ebuild:
  Version bump
