@@ -15,19 +15,31 @@ DIST perl-5.18.2.tar.bz2 14058513 SHA256 06a0cd490be36d829606aa41d8c9c4c72ae7054
 DIST perl-5.20.1-patches-2.tar.xz 14056 SHA256 ec637f307d177869bf2417e59e6c8dbdd8fd73451b577913d2165f84e68c9b66 SHA512 3d8f8452ac6941a16b862be6a8224f26742e77f0c555ff5c5eeacefb6a1c4d21c96da26014c0c2e714011d87358bbfd669e83279b2937d034c2e6f109ee9d5ee WHIRLPOOL dbd8ffaa2423ebf2764cc722573836bbab19a02e0fecd9f0bdda30f8f592b0159275df45aca8235e31179b5d440bc774286105683784ed06a8d9f77140046056
 DIST perl-5.20.1.tar.bz2 13676155 SHA256 ede5ded37e7fb6139b04728cfca826f17076f9888dbfd100a56834dbeb04657c SHA512 b070b66800d86357df9fc4b2323d0bd97cc5ba6f92a26991d4c41ba58c94386bde91f9c2bff19920647375116e8642360eda8e6cc753cc451c110c3bf9576787 WHIRLPOOL 359e13613826c7c76844bbb32be453aad4103d382a99cb8df0f25c6ec3e68a16962b891c72478d2803adc4573aff161405ddf3274dfe1c23236037ac23e7fc3a
 DIST perl-5.20.2-patches-1.tar.xz 14640 SHA256 c084291cdf3e78b8fa2901f79e92f1e93aece7b7b8cb4e931a5df9616b0f6ba5 SHA512 5be0314529e926efcad1e73aebef73a72b86587a31ae68a93b8446edd5cea293027c61d41727b993611d7fb1d694b7740b7ed948dc59cd29ea7ad2646e7be327 WHIRLPOOL ea554c09531778bd655e4208943393cdcdb72d980956c609a6cd0da18ee74c3204d51c8151094bad7e602b6bab5f2bb55f35d632beabfdde9ab35ef374e7494c
+DIST perl-5.20.2-patches-2.tar.xz 15892 SHA256 5ca37bdd05c770d4d33e59116093d5083bdaffd9212541c7de08d5b8495e9bcd SHA512 6c892a5eb8f9fc1bf4a3c69ed751f22895e4d545e5e70f9c73d54d61121818b4ea220d80a31db4269aca9a7805688d2013c8128e27c013051d4d12d56922f6ed WHIRLPOOL 37c6b9f84a0d9b83220e21d323aea96f00487b37666a48b351fffc7a36c913c43532ab2bcbfd0ab8bca42f95d4bb78d210c20df164861f97e2ddc5e5ffc35a5c
 DIST perl-5.20.2.tar.bz2 13717128 SHA256 e5a4713bc65e1da98ebd833dce425c000768bfe84d17ec5183ec5ca249db71ab SHA512 1da867f04137e84cc6f4148fd7c15933cdc675939bf20f524b659b3c3a6225a18efe9f4cd8c445b9536f3efc13f1c5b696fcf14584e1f20ad1f908a9b6ca509c WHIRLPOOL 5654f824c57b4c78a6b4cd250e2055ec541def9a04b976444bbc80ced82105b1e9a283b809535a9092fc21eb6613ab4464f59575bc42f961698bbe70aa5a81a7
 EBUILD perl-5.18.2-r2.ebuild 4468 SHA256 efb829e2c9f56a37eb11df967b22fb3b6f0b9ffe4b021c6bb74088af621d9994 SHA512 8179dab5e43ebeb97f5070d2d4b29c8f7e4fac6fa8a1dc725e71c0216e4c3445a6eb301f9974c0d5299f425988594568a587f15a6b4dc251646d8537436dfcb3 WHIRLPOOL 82c9f9fd86fca7f2208eae7fbaae00a36846d4db824f41a2e3fd0679922ff61f57bcb01ad3b6e8b7fed595db88fcaadfe7c80d2df53b8a401c671f54162aff74
 EBUILD perl-5.20.1-r4.ebuild 4249 SHA256 bbdcbe99cc84e463f884a5fc1ec43154b408a5e999fb51ad6ad7bae9f2312d73 SHA512 c53e7f792cf5127727c3fad23418f09ff306cd0d0c3ce0217d23aad7a867062b8117ad6be5f9e9bd8de965af004825fb10b80690780e72879fccddd3af6fdc87 WHIRLPOOL 0a6cfbd8e6b75a2afee8ef1a750411336f209ddd8e92e0ae872d10ee446917b100cc5389fe95e6c763ff6dc4eff4f603903817d5df48d287c88ac821aa8b8620
+EBUILD perl-5.20.2-r1.ebuild 4308 SHA256 51f7470d97fb636c45176a820fbfb1eff281bce9e104ced298de99ed4035dafb SHA512 7b4b9988d5f60cf59adb2e37f0ebb690f5a132b8d08639f400e1794922ce50859788f34ae855ff49c9534a01b85db387b15c21d8ec1d6d72d5a90e9cefb7b1c5 WHIRLPOOL 8330f6d572fc0060f1a23e5886c0b5db683d67abec1e0203a165459310c5c0ab8daf633a9a465ab3e33cb4d6213b9f1efcd808c87a8030f9c7646ea260747c0e
 EBUILD perl-5.20.2.ebuild 4291 SHA256 49f8dfb63a7e81924248783c2d0d9373e944e2c47dcf999ba79e98a49aac80dd SHA512 c9946ced75e8640fb6fcb9bf8d1fa8f2b2463fab3038f385dd09621b2aedab8f726c3e10047c9b4ff3768edee07c8dd37874c401b7abd8e3cfdf9b24f71f1b2c WHIRLPOOL cc0b1cc5ab0ac8140aa7c15818bb5ba392743643baf3d56b0c28478596fba2648a27bfe35be418b676ff16108c5f079b9125daf69749e2bc6d9e8556b6b2abba
-MISC ChangeLog 2576 SHA256 92351679dbf722614d088d2ccb983842688207debcff90e15ab07e10ca6ad5da SHA512 49cb73b03fd96706d6ea7131c0cbc9eb0c47edaaa62cc2f3160e9149a6b28999daab5274507546bf7ddad2053ac8317bf9b30b5a47c96e2f72ff16afb108531b WHIRLPOOL 9a2b5c68a3d3145b811b35917725cc270b6d71c73b41655aa8023cd6c8c6b1c03e52d4dace51cb8465d38eff1e58a85cb7902e121f932db6c19cf7639883ee92
+MISC ChangeLog 2746 SHA256 439a2ce2f46aa855d07babaae7464d2329e15a9c1e37f1d169a08d32e29db1d0 SHA512 ab7bab0399f82fd13ccf1e666ed466c2ef3f3b17407661c755aa063c43450e078cbd93232435909dbff54c9ea1cb85974ed76b400b9353483a07794ccc9039ba WHIRLPOOL 3259c1c7e0bcf6559c240890a9dbbe2e6ddaf1aaf4c1ea01dc0cafc5f46a6bf13cb3aeea90b53ee9e0bc368d3978dda992e9670e0689b4ad778d6b8c90b6daa7
 MISC ChangeLog-2014 86908 SHA256 36afb5e482f7c0faf3cb0491c694758752f81a8037fafbf69f33f82a535463dc SHA512 87a6b79f868b97ef1f1430d9616f4f47bc526add8eab73a40065f865a1097bc393001b3457cbfcf876a51cf710fd7d67183932fccdd0a658b9ae8c8cb2e30b52 WHIRLPOOL 536b71f37a08710b083d6df5ecf231ebb6debfaae56f12a5f78b46bf2c419b74eb9f53e35fda4f11c9c95a0a9089c3558b08f575f2c8137fa8fbcf4b19ed098f
 MISC metadata.xml 257 SHA256 94d99e58fcedfe7951797e5cbd70790c21b87c1e07a7003f650632bb0a4f2300 SHA512 caf80fd9d8931ab6d476afc21fcc840894cdb4cf548d196958321a0ba09ab83ff98de3f8b5f01701f8101fd0ec0fcfc35ae6e572aa8ef499b106c3ac8cabb769 WHIRLPOOL 7793b51d68b2c56ff1d6029be61fc41007af60c7143e8d82d87891e2863c1978c92d2bc13a0266e4506b69c0012a8555d27ce05061e4ce8c656b32e937badeae
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2
+Version: GnuPG v2.0
 
-iJwEAQEIAAYFAlUpW/gACgkQG9wOWsQutdaBtgQArfByFwreJdDRYao/7aKYPwpe
-IqukOZp5kc7PlItk/YVh2zGEo6rTBUX3pI7uufb+DXwA+qB/TNRucnN3XAg6Q0M9
-l5vgnJk1QLW1ecsuPUiGTkX8fbplEsoglkTOtFsNEGx71gTrGnxcGIASYMUfWT0Z
-PnsYNGD/IZb/Pj7734A=
-=bVco
+iQJ8BAEBCABmBQJVToD8XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ0RkJDMzI0NjNBOTIwMDY5MTQ2NkMzNDBF
+MTM4NkZEN0VGNEI1Nzc5AAoJEOE4b9fvS1d5ea8P/i+mO8NpnjcvKnN1zTGmbkLX
+YSNgjKCIiPzOPmClX263nUqbcx7ep4KOSqFcvJmsqmKrWXZiPJDIEH35ExDHv73j
+RvtSMkjLDPic8mvQaTgphyQsfBRBC7sDykHFvCu6QuWW1GgQT5CkZ+Gx2SfbaP0G
+Pd+HJlRgvtfITZbvndjk+cBP1kTxeoWk72HyAviEIqLHZtA451ouOg7PiRt2m/a/
+aDo9e0mmAZp7At/+jaWjCi2ENuKCetx5tUGMEUpUAWlAaGCUuSSdGZ2o6fHoaHhH
+zfPQ2jZzEqTeSzU25Y4m7PtKN2JE1XXLbNCGXBZKE7oiVmgtzEkfnWvg/5gZ1C/l
+6gYD316aLarXVJxzA+6qY2bKkK6vx2nG3P+hDYswU6Wr4WtOYDc49aWsGDetvhrB
+J2QFxgthQhwRtMPPv7IQyTVYf/AJSBUjpiMxfcvV1aISfv3/bQzp+YIY/j6yf6NS
+ELEG3oCy4DJadAtC2yQ/2X0YLk3Dhn53byEmh2Ztxf7Ei0WubvfIGmlH1Fh49EwI
+DL019LTFZ0zk+XsTTknhCODK3imqP1swvykUjteAA1g2S/AcvYN3kVh+IRgXdzTP
+kQ4jApebRG8Rt1aTKcHVKJcZk7oFepSLA0KC3mCF5JdpRs7zsFgmLeYh+zXQnUlK
+aT9x3WhFrPfuzxvJ5e/K
+=bpbe
 -----END PGP SIGNATURE-----
