@@ -1,0 +1,14 @@
+DEFINED_PHASES=configure install postinst postrm prepare test
+DEPEND=berkdb? ( sys-libs/db ) gdbm? ( >=sys-libs/gdbm-1.8.3 ) app-arch/bzip2 sys-libs/zlib !prefix? ( elibc_FreeBSD? ( sys-freebsd/freebsd-mk-defs ) )
+DESCRIPTION=Larry Wall's Practical Extraction and Report Language
+EAPI=5
+HOMEPAGE=http://www.perl.org/
+IUSE=berkdb debug doc gdbm ithreads
+KEYWORDS=~alpha ~amd64 ~arm ~arm64 ~hppa ~ia64 ~m68k ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~ppc-aix ~amd64-fbsd ~x86-fbsd ~x64-freebsd ~x86-freebsd ~hppa-hpux ~ia64-hpux ~x86-interix ~amd64-linux ~ia64-linux ~x86-linux ~ppc-macos ~x64-macos ~x86-macos ~m68k-mint ~sparc-solaris ~sparc64-solaris ~x64-solaris ~x86-solaris
+LICENSE=|| ( Artistic GPL-1+ )
+PDEPEND=>=app-admin/perl-cleaner-2.5 >=virtual/perl-File-Temp-0.230.400-r2 >=virtual/perl-Data-Dumper-2.154.0
+RDEPEND=berkdb? ( sys-libs/db ) gdbm? ( >=sys-libs/gdbm-1.8.3 ) app-arch/bzip2 sys-libs/zlib
+SLOT=0/5.20
+SRC_URI=mirror://cpan/src/5.0/perl-5.20.2.tar.bz2 mirror://cpan/authors/id/S/SH/SHAY/perl-5.20.2.tar.bz2 mirror://gentoo/perl-5.20.2-patches-2.tar.xz http://dev.gentoo.org/~dilfridge/distfiles/perl-5.20.2-patches-2.tar.xz
+_eclasses_=alternatives	326031758c86cd08f5844f475f03ac01	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	5d5921a298e95441da2f85be419894c0	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92
+_md5_=c6b8e3b21de375292325f0b09754bc7a
